# rustex

./: Cargo.toml  README.md
scripts/tests/: cli-tests.sh
src/: lib.rs  main.rs  printer.rs
src/executor/: mod.rs  node.rs  utils.rs
src/parser/: mod.rs  node.rs  parse_node.rs
src/replace/: mod.rs
tests/: executor_tests.rs  parser_tests.rs  replace_tests.rs
tests/snapshots/: executor_tests__groups.snap  executor_tests__groups_simple.snap  executor_tests__lazy_match.snap  executor_tests__lazy_match.snap.new  executor_tests__optional_match_branch.snap  executor_tests__optional_match_branch_group.snap  executor_tests__or.snap  executor_tests__or.snap.new  executor_tests__partial_word_match.snap  executor_tests__partial_word_match.snap.new  executor_tests__ps.snap  executor_tests__ps.snap.new  executor_tests__repetition.snap  executor_tests__repetition_range.snap  executor_tests__set.snap  executor_tests__start_end.snap  executor_tests__start_end.snap.new  parser_tests__parse_alphanum.snap  parser_tests__parse_escaped.snap  parser_tests__parse_groups.snap  parser_tests__parse_modifiers.snap  parser_tests__parse_modifiers.snap.new  parser_tests__parse_or.snap  parser_tests__parse_repetition_range.snap  parser_tests__parse_repitition_range.snap  parser_tests__parse_sets.snap  parser_tests__unexpected_char_err.snap  parser_tests__unexpected_char_err.snap.new  replace_tests__replace_basic.snap  replace_tests__replace_basic.snap.new
