[package]
name = "rustex"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "rustex-cli"
path = "src/bin/cli/main.rs"

[dependencies]
indexmap = "2.0.2"
insta = "1.34.0"
maplit = "1.0.2"
clap = { version = "4.4.18", features = ["derive"] }
termcolor = "1.4.1"
lazy_static = "1.4.0"
log = { version = "0.4.21", features = ["kv"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "valuable"] }
tracing-subscriber = "0.3.18"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
futures = "0.3.30"
async-recursion = "1.1.1"
